<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.satpay.ecoshop.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_shopping_cart"
            app:destination="@id/navigation_shopping_cart" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.satpay.ecoshop.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.satpay.ecoshop.fragment.ShoppingCartFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping_cart" />

</navigation>