<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18sp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/img_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_sort"
        app:layout_constraintStart_toStartOf="@+id/card_banner"
        app:layout_constraintTop_toBottomOf="@+id/card_banner" />

    <TextView
        android:id="@+id/txt_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sort"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_sort"
        app:layout_constraintStart_toEndOf="@+id/img_sort"
        app:layout_constraintTop_toTopOf="@+id/img_sort" />

    <TextView
        android:id="@+id/txt_asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableEnd="@drawable/ic_up"
        android:drawablePadding="4dp"
        android:drawableTint="@color/primary"
        android:text="@string/asc"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_sort"
        app:layout_constraintStart_toEndOf="@+id/txt_sort"
        app:layout_constraintTop_toTopOf="@+id/img_sort" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:drawableEnd="@drawable/ic_down"
        android:drawablePadding="4dp"
        android:text="@string/desc"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_sort"
        app:layout_constraintStart_toEndOf="@+id/txt_asc"
        app:layout_constraintTop_toTopOf="@+id/img_sort" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_white"
        app:layout_constraintEnd_toEndOf="@+id/card_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_banner"
        app:layout_constraintTop_toBottomOf="@+id/txt_asc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>