<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/back_actionbar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@+id/view_actionbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_actionbar" />


        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_logo_white"
            app:layout_constraintBottom_toBottomOf="@+id/view_actionbar"
            app:layout_constraintEnd_toStartOf="@+id/img_logo_txt"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_actionbar" />


        <ImageView
            android:id="@+id/img_logo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_logo_text_white"
            app:layout_constraintBottom_toBottomOf="@+id/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/img_logo" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_num"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:background="@drawable/back_circle_button"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_bag"
            app:layout_constraintEnd_toStartOf="@+id/img_bag"
            app:layout_constraintStart_toStartOf="@+id/img_bag"
            app:layout_constraintTop_toTopOf="@+id/img_bag" />

        <ImageView
            android:id="@+id/img_bag"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_bag"
            app:layout_constraintBottom_toBottomOf="@+id/view_actionbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_actionbar" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:lineHeight="14sp"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_actionbar"
            tools:text="@string/lorem" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_desc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view_back"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/gray_white2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/add_product"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view_back" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="3dp"
                    app:boxCornerRadiusBottomStart="3dp"
                    app:boxCornerRadiusTopEnd="3dp"
                    app:boxCornerRadiusTopStart="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/view_back">

                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_desc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="3dp"
                    app:boxCornerRadiusBottomStart="3dp"
                    app:boxCornerRadiusTopEnd="3dp"
                    app:boxCornerRadiusTopStart="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/lay_title">

                    <EditText
                        android:id="@+id/edt_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/description"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_category"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="3dp"
                    app:boxCornerRadiusBottomStart="3dp"
                    app:boxCornerRadiusTopEnd="3dp"
                    app:boxCornerRadiusTopStart="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/lay_desc">

                    <EditText
                        android:id="@+id/edt_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/category"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_img_url"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="3dp"
                    app:boxCornerRadiusBottomStart="3dp"
                    app:boxCornerRadiusTopEnd="3dp"
                    app:boxCornerRadiusTopStart="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/lay_category">

                    <EditText
                        android:id="@+id/edt_img_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/img_url"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lay_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomEnd="3dp"
                    app:boxCornerRadiusBottomStart="3dp"
                    app:boxCornerRadiusTopEnd="3dp"
                    app:boxCornerRadiusTopStart="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/lay_img_url">

                    <EditText
                        android:id="@+id/edt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/price"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/back_button_orange"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/orange2"
                    app:layout_constraintEnd_toStartOf="@+id/btn_check_out"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lay_price" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_check_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/back_button_orange_fill"
                    android:text="@string/add_product"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                    app:layout_constraintTop_toBottomOf="@+id/lay_price" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>